[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.7"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
rp-pico = "0.5.0"
# seeeduino-xiao-rp2040 = "0.2.0"
alloc-cortex-m = "0.4.2"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
libm = "0.2.5"
fugit = "0.3.6"

mlx9061x = "0.2.0"

embedded-graphics = "0.7.1"
sh1106 = "0.4.0"

app-core = { path = "../lib/app-core" }
